[tool.poetry]
name = "alerticular"
version = "0.0.1"
description = "Handle incoming Alertmanager alerts and send them to Telegram"

license = "AGPLv3+"

authors = [
    "Max Rosin <git@hackrid.de>",
    "Markus Ressel <mail@markusressel.de>",
]

readme = 'README.md'

repository = "https://github.com/ekeih/alerticular"
homepage = "https://github.com/ekeih/alerticular"

keywords = ['alerting', 'alerticular']

classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[build-system]
requires = ["poetry>=1.2.2"]

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here

aiogram = "^2.11"
aiohttp = { version = "^3.7", extras = ["speedups"] }
cchardet = "^2.1"
click = "^8.1"
emoji = "^1.1"
Jinja2 = "^3.1"
prometheus_async = { version = "^22.2", extras = ["aiohttp"] }
telegram-click-aio = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-cov = "^2.11"
pytest-aiohttp = "^0.3.0"
pytest-mock = "^3.5.0"
mypy = "^0.982"

[tool.poetry.scripts]
alerticular = 'alerticular.cli:cli'
